--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "ai": "^2.2.31",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "openai": "^4.26.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
