--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@uploadthing/react": "^6.2.2",
     "ai": "^2.2.31",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
@@ -29,6 +30,7 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "uploadthing": "^6.3.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
