--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "ai": "^2.2.31",
+    "axios": "^1.6.7",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "openai": "^4.26.0",
